name:       reroute-benchmarks
version:    0
build-type: Simple

cabal-version: >=1.2

executable reroute-benchmarks
  ghc-options: -Wall -O2
  hs-source-dirs: ../src .
  main-is: Benchmarks.hs
  other-modules:
  build-depends:
    base,
    criterion,
    text,
    mtl,
    unordered-containers,
    vector,
    hashable,
    regex-compat,
    random,
    deepseq,
    path-pieces
    --bytestring,
    --containers,
    --deepseq,
    --ghc-prim,
    --hashable,
    --mtl,
    --random